-*- outline -*-

This file contains information about the version numbers
and what's changed.
Hopefully, the #defines ETHERIP_MAYOR and ETHERIP_MINOR
in ether_ipApp/src/drvEtherIP.h are updated accordingly,
so that you can see the current version at runtime via
drvEtherIP_report.

* 2012, Jul 18 ether_ip-2.24.1
David Dudley provided correction to fix interfernce between BOOL tags
and register array access.  Boolean tag flag was in the wrong location,
and would prevent access to variable array elements.

* 2011, Oct 5 ether_ip-2-24
David Dudley provided a fix for BOOL tags.
BOOL[] and bits-in-DINT worked fine, but when attaching
a bo record to an individual BOOL tag the following could happen:

bo writes 'true' as 0x1 (bit #0 set)
-> BOOL on PLC changes into 0xFF (all bits set).
bo reads that back.
When the bo now tried to write 'false',
it used 0xFE (bit #0 cleared), which the PLC still
considered 'true' (0xFF).
With this patch the driver will write 0x00 (all bits cleared)
for BOOL tags.


* 2011, Aug 30 ether_ip-2-23
Stephanie Allison added support for 64 bit.
Andrew Johnson reported successful test of the changes at APS
and updated the Makefiles for parallel build via "make -j".

* 2011, Mar 31 ether_ip-2-22
John Sinclair sent fix for EIP_printf(4, .. call with possible null argument

* 2011, Feb 14 ether_ip-2-21
Janet Anderson contributed patches to avoid compile errors from
EPICS base R3.14.10 on where the RVAL field was changed from unsigned long
to epicsUInt32. 

* 2010, Nov 5 ether_ip-2-20
Jeff Hill noticed that driver could invoke for example ao record callbacks,
i.e. call scanOnce() on a record, while the IOC is still starting up
and the "onceQ" ring buffer is not initalized.
Driver now waits until IOC startup is 'done'.

* 2010, Aug 19
No new version, but sources moved to Source Forge.

* 2009, Sept 1 ether_ip-2-19
'do_write' flag got lost when a tag marked for writing
didn't fit into a network request and was moved into
the next one.
