@@ -5,7 +5,7 @@
 # Specify the full path to your EPICS base location
 # as well as the 'share' section where the EtherIP driver
 # is located
-EPICS_VER=R3.14.11
+EPICS_VER=R3.14.12.2
 EPICS_BASE_RELEASE=/Kram/epics/$(EPICS_VER)/base
 SHARE=/Kram/epics/$(EPICS_VER)/share
 ETHER_IP=$(SHARE)/ether_ip/ether_ip-2-21
